--- a/index.html
+++ b/index.html
@@ -12,56 +12,39 @@
   <div class="flex-container">
     <div class="flex-block">
       <picture>
-        <source srcset=".\img\Microsoft_365_Copilot_Icon.svg" media="(max-width: 600px)" />
-        <img src="img/image4.jpg" alt="art">
+        <source srcset=".\img\image.png" media="(max-width: 600px)" />
+        <img src="http://fakeimg.pl/300/">
       </picture>
-      <p>L'art africain primitif est connu pour sa richesse culturelle et son expression artistique
-        unique. Il englobe une variété de formes d'art, telles que la sculpture sur bois, la poterie, la peinture et la
-        tapisserie. Leurs œuvres d'art sont appréciées pour leur esthétique brute et leur connexion profonde avec la
-        nature et la spiritualité africaines.</p>
-      <p>©️ Création D. Dupont</p>
+      <p>Groupe</p>
+      <p>NOM:</p>
     </div>
     <div class="flex-block">
       <picture>
-        <source srcset=".\img\Microsoft_365_Copilot_Icon.svg" media="(max-width: 600px)" />
-        <img src="img/image2.jpg" alt="art">
+        <source srcset=".\img\image.png" media="(max-width: 600px)" />
+        <img src="http://fakeimg.pl/600/">
       </picture>
 
       <!-- para of sand art -->
-      <p>L'art du sable est une forme d'art éphémère qui consiste à créer des sculptures et des
-        installations artistiques à partir de sable. Les artistes de sable utilisent souvent des outils et des
-        techniques
-        spécifiques pour créer des œuvres d'art complexes et détaillées. L'art du sable est souvent associé à la plage
-        et
-        à d'autres environnements naturels, où les artistes peuvent utiliser le sable comme matériau de base pour leurs
-        créations. Les œuvres d'art du sable sont souvent éphémères, car elles sont facilement détruites par les
-        éléments naturels, comme le vent et la pluie.</p>
-      <p>©️ Création D. Dupont</p>
+      <p>Groupe</p>
+      <p>NOM:</p>
     </div>
     <div class="flex-block">
       <picture>
-        <source srcset=".\img\Microsoft_365_Copilot_Icon.svg" media="(max-width: 600px)" />
-        <img src="img/image3.jpg" alt="Image 3">
+        <source srcset=".\img\image.png" media="(max-width: 600px)" />
+        <img src="http://fakeimg.pl/600/">
       </picture>
-      <p>Les phares de mer sont des structures imposantes situées le long des côtes pour guider les navires en mer. Ils
-        servent de repères visuels et aident à prévenir les accidents maritimes. Les phares de mer sont souvent
-        considérés comme des symboles de sécurité et de protection dans le monde maritime.</p>
-      <p>©️ Photo D. Dupont</p>
+      <p>Groupe</p>
+      <p>NOM:</p>
     </div>
     <div class="flex-block">
       <picture>
-        <source srcset=".\img\Microsoft_365_Copilot_Icon.svg" media="(max-width: 600px)" />
-        <img src="img/image1.jpg" alt="Image 1">
+        <source srcset=".\img\image.png" media="(max-width: 600px)" />
+        <img src="http://fakeimg.pl/300/">
       </picture>
 
 
-      <p>La photographie est un art visuel qui permet de capturer des moments, des émotions et des paysages de manière
-        créative. Les photographes utilisent des techniques telles que la composition, l'éclairage et la mise au point
-        pour créer des images qui racontent une histoire ou transmettent une émotion. Que ce soit en noir et blanc ou en
-        couleur, la photographie offre une perspective unique sur le monde qui nous entoure. Les photographes
-        professionnels et amateurs explorent différents sujets tels que la nature, les portraits, l'architecture et bien
-        plus encore.</p>
-      <p>©️ Photo D. Dupont</p>
+      <p>Groupe</p>
+      <p>NOM:</p>
     </div>
   </div>
   </div>
