--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="flex-block">
       <picture>
         <source srcset=".\img\image.png" media="(max-width: 600px)" />
-        <img src="http://fakeimg.pl/300/">
+        <img src="https://fakeimg.pl/600/">
       </picture>
       <p>Groupe</p>
       <p>NOM:</p>
@@ -21,7 +21,7 @@
     <div class="flex-block">
       <picture>
         <source srcset=".\img\image.png" media="(max-width: 600px)" />
-        <img src="http://fakeimg.pl/600/">
+        <img src="https://fakeimg.pl/600/">
       </picture>
 
       <!-- para of sand art -->
@@ -31,7 +31,7 @@
     <div class="flex-block">
       <picture>
         <source srcset=".\img\image.png" media="(max-width: 600px)" />
-        <img src="http://fakeimg.pl/600/">
+        <img src="https://fakeimg.pl/600/">
       </picture>
       <p>Groupe</p>
       <p>NOM:</p>
@@ -39,7 +39,7 @@
     <div class="flex-block">
       <picture>
         <source srcset=".\img\image.png" media="(max-width: 600px)" />
-        <img src="http://fakeimg.pl/300/">
+        <img src="https://fakeimg.pl/600/">
       </picture>
 
 
